[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Default - Medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://Textures/emptyButton.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Default - Title.tres" type="DynamicFont" id=4]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="itemContainer" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -52.0
margin_right = 90.0
margin_bottom = 52.0

[node name="changeSpawnMode" type="TextureButton" parent="itemContainer"]
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="itemContainer/changeSpawnMode"]
anchor_top = 0.15
anchor_bottom = 0.15
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "SPAWN: SEMI"

[node name="backButton" type="TextureButton" parent="itemContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="itemContainer/backButton"]
anchor_left = 0.25
anchor_right = 0.25
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "BACK"
